ANDROID-2796 Expose a mechanism to obtain URIs from JiveCore
Change-Id: Ib8dcb95cecfb83d3507869a47c34f5d2b013c292