@@ -1,6 +1,6 @@
-package com.jivesoftware.android.mobile.sdk.util;
+package com.jivesoftware.android.mobile.sdk.core;
 
-import com.jivesoftware.android.mobile.sdk.core.JiveCoreRequestOptions;
+import org.junit.Before;
 import org.junit.Test;
 
 import java.net.URI;
@@ -9,9 +9,11 @@ import java.util.Arrays;
 
 import static org.junit.Assert.assertEquals;
 
-public class JiveURIUtilTest {
+public class JiveCoreURIFactoryTest {
     private static final String EXPECTED_COMPLETE_ROOT_URL = "http://jivesoftware.com/api/coreV3/someEndpoint/";
     private static final String EXPECTED_COMPLETE_NONROOT_URL = "http://jivesoftware.com/NonRootContext/api/coreV3/someEndpoint/";
+
+    private JiveCoreURIFactory testObject;
 
     @Test
     public void testCreateURIWithOptions() throws Exception {
@@ -19,7 +21,8 @@ public class JiveURIUtilTest {
         options.setCount(2);
         options.setFields(Arrays.asList("foo", "bar"));
 
-        URI actual = JiveURIUtil.createURI(new URL("http://jivesoftware.com"), "/path", options);
+        testObject = new JiveCoreURIFactory(new URL("http://jivesoftware.com"));
+        URI actual = testObject.createURI("/path", options);
         assertEquals(new URI("http://jivesoftware.com/path?count=2&fields=foo%2Cbar"), actual);
     }
 
@@ -29,16 +32,19 @@ public class JiveURIUtilTest {
         options.setCount(2);
         options.setFields(Arrays.asList("foo", "bar"));
 
-        URI actual = JiveURIUtil.createURI(new URL("http://jivesoftware.com"), "/path?fizz=buzz", options);
+        testObject = new JiveCoreURIFactory(new URL("http://jivesoftware.com"));
+        URI actual = testObject.createURI("/path?fizz=buzz", options);
         assertEquals(new URI("http://jivesoftware.com/path?fizz=buzz&count=2&fields=foo%2Cbar"), actual);
     }
 
     @Test
     public void testWhenUrlHasNoQueryParamsButIsFullyFormedThenQuestionMarkIsNotAppended() throws Exception {
         JiveCoreRequestOptions options = new JiveCoreRequestOptions();
-        String url = "http://jivesoftware.com/?q=whatever";
-        URI actual = JiveURIUtil.createURI(new URL(url), "", options);
-        assertEquals(new URI(url), actual);
+        String baseUrl = "http://jivesoftware.com/?q=whatever";
+
+        testObject = new JiveCoreURIFactory(new URL(baseUrl));
+        URI actual = testObject.createURI("", options);
+        assertEquals(new URI(baseUrl), actual);
     }
 
     @Test
@@ -46,7 +52,9 @@ public class JiveURIUtilTest {
         String urlStr = "http://jivesoftware.com";
         String subPath = "api/coreV3/someEndpoint/";
         URL baseURL = new URL(urlStr);
-        URI actual = JiveURIUtil.createURI(baseURL, subPath);
+
+        testObject = new JiveCoreURIFactory(baseURL);
+        URI actual = testObject.createURI(subPath);
         assertEquals(EXPECTED_COMPLETE_ROOT_URL, actual.toString());
     }
 
@@ -55,7 +63,9 @@ public class JiveURIUtilTest {
         String urlStr = "http://jivesoftware.com/";
         String subPath = "api/coreV3/someEndpoint/";
         URL baseURL = new URL(urlStr);
-        URI actual = JiveURIUtil.createURI(baseURL, subPath);
+
+        testObject = new JiveCoreURIFactory(baseURL);
+        URI actual = testObject.createURI(subPath);
         assertEquals(EXPECTED_COMPLETE_ROOT_URL, actual.toString());
     }
 
@@ -64,7 +74,9 @@ public class JiveURIUtilTest {
         String urlStr = "http://jivesoftware.com/NonRootContext/";
         String subPath = "api/coreV3/someEndpoint/";
         URL baseURL = new URL(urlStr);
-        URI actual = JiveURIUtil.createURI(baseURL, subPath);
+
+        testObject = new JiveCoreURIFactory(baseURL);
+        URI actual = testObject.createURI(subPath);
         assertEquals(EXPECTED_COMPLETE_NONROOT_URL, actual.toString());
     }
 
@@ -74,7 +86,9 @@ public class JiveURIUtilTest {
         String urlStr = "http://jivesoftware.com/NonRootContext";
         String subPath = "/api/coreV3/someEndpoint/";
         URL baseURL = new URL(urlStr);
-        URI actual = JiveURIUtil.createURI(baseURL, subPath);
+
+        testObject = new JiveCoreURIFactory(baseURL);
+        URI actual = testObject.createURI(subPath);
         assertEquals(EXPECTED_COMPLETE_NONROOT_URL, actual.toString());
     }
 
@@ -83,7 +97,9 @@ public class JiveURIUtilTest {
         String urlStr = "http://jivesoftware.com/NonRootContext";
         String subPath = "api/coreV3/someEndpoint/";
         URL baseURL = new URL(urlStr);
-        URI actual = JiveURIUtil.createURI(baseURL, subPath);
+
+        testObject = new JiveCoreURIFactory(baseURL);
+        URI actual = testObject.createURI(subPath);
         assertEquals(EXPECTED_COMPLETE_NONROOT_URL, actual.toString());
     }
 
@@ -92,7 +108,10 @@ public class JiveURIUtilTest {
         String urlStr = "http://jivesoftware.com/NonRootContext/";
         String subPath = "/api/coreV3/someEndpoint/";
         URL baseURL = new URL(urlStr);
-        URI actual = JiveURIUtil.createURI(baseURL, subPath);
+
+        testObject = new JiveCoreURIFactory(baseURL);
+        URI actual = testObject.createURI(subPath);
         assertEquals(EXPECTED_COMPLETE_NONROOT_URL, actual.toString());
     }
+
 }
